<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp">
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginEnd="20dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pajama_drive"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pajama_drive"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsmedium"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jkt_48"
            android:textColor="@color/grey"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10m_streams"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppinsmedium"
            />
    </LinearLayout>

</LinearLayout>